Correção de falhas na media query 1024px.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -806,6 +806,7 @@ p, label {
         max-width: 100%;
         height: auto;
         position: relative;
+        z-index: 500;
         /* O transform scale impede a biblioteca AOS de funcionar. */
     }
 
