--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1387,6 +1387,11 @@ p, label {
         position: relative;
     }
 
+    .ift-portfolio-list .ift-portfolio-item-box {
+        width: 0;
+        height: 0;
+    }
+
     .ift-portfolio-list .ift-portfolio-item:nth-child(odd) .ift-portfolio-item-info {  /* Seleciona elementos com base em suas posições ou classificação (odd = ímpar) em um grupo de elementos irmãos. */
         text-align: right;  /* Aplicando a todos os elementos ímpares da lista. */
         margin-top: 66px;
@@ -1524,6 +1529,11 @@ p, label {
         width: 100%;
         max-width: 100%;
         left: -75px;
+    }
+
+    .ift-portfolio-list .ift-portfolio-item-box {
+        width: 100%;
+        height: 100%;
     }
 
     .ift-slider-list .ift-portfolio-item-thumb > .ift-btn {
