--- a/CSS/main.css
+++ b/CSS/main.css
@@ -206,6 +206,7 @@ p, label {
         display: table;
         background-color: #1C1C1C;
         border: 30px solid #000;
+        overflow: hidden; /* A propriedade overflow especifica quando o conteúdo de um elemento de nível de bloco deve ser cortado, exibido com barras de rolagem ou se transborda do elemento.*/
     }
 
     .ift-preloader {
@@ -526,7 +527,7 @@ p, label {
     }
 
     .ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 51%;
         background-position-y: 73%;
@@ -853,7 +854,7 @@ p, label {
     }
 
     .ift-about-height .container-fluid, .ift-about-height .container-fluid > .row {
-        height: 100%;
+        height: 96%;
     }
 
     .ift-avatar-sobre {
@@ -1141,7 +1142,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 55%;
         background-position-y: 72%;
@@ -1179,7 +1180,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 50%;
         background-position-y: 70%;
@@ -1235,7 +1236,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 50%;
         background-position-y: 70%;
@@ -1564,7 +1565,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 85%;
         background-position-y: 20%;
@@ -1600,7 +1601,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 85%;
         background-position-y: 20%;
@@ -1630,7 +1631,7 @@ p, label {
     }
 
     #ift-home-presentation {
-        background-image: url('../../LAYOUT/igor-foto-photoshop-tiny.png');
+        background-image: url('../LAYOUT/igor-foto-photoshop-tiny.png');
         background-repeat: no-repeat;
         background-position-x: 85%;
         background-position-y: 20%;
@@ -1747,6 +1748,11 @@ p, label {
     font-weight: 800;
 }
 
+.ift-footer {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
 
 .ift-title-medium {
     font-size: 48px;
@@ -1754,6 +1760,11 @@ p, label {
 
 .ift-title-large {
     font-size: 64px;
+}
+
+.ift-title-small {
+    font-size: 14px;
+    text-align: center;
 }
 
 .ift-text-orange {
