--- a/portfolio/jogo_da_velha/CSS/style.css
+++ b/portfolio/jogo_da_velha/CSS/style.css
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-rows: auto 50px;
     grid-template-columns: auto;
+    overflow: hidden;
 }
 
 .container::before{
@@ -23,6 +24,7 @@
     right: 0;
     left: 0;
     bottom: 0;
+    overflow: hidden;
 }
 
 h1{
