--- a/CSS/main.css
+++ b/CSS/main.css
@@ -549,7 +549,7 @@ p, label {
     .ift-home-about-boxes{
         width: 110px;
         height: 110px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to top, #FB8500, #000);
         border-image-slice: 1;
@@ -563,7 +563,7 @@ p, label {
     .ift-home-about-boxes-bottom{
         width: 110px;
         height: 110px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to bottom, #FB8500, #000);
         border-image-slice: 1;
@@ -590,7 +590,7 @@ p, label {
     .ift-home-services-boxes, .ift-home-services-boxes-top{
         width: 210px;
         height: 280px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to bottom, #FB8500, #000);
         border-image-slice: 1;
@@ -602,7 +602,7 @@ p, label {
     .ift-home-services-boxes-top{
         width: 210px;
         height: 280px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to top, #FB8500, #000);
         border-image-slice: 1;
@@ -1720,7 +1720,7 @@ p, label {
     .ift-home-services-boxes, .ift-home-services-boxes-top{
         width: 210px;
         height: 280px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to bottom, #FB8500, #000);
         border-image-slice: 1;
@@ -1733,7 +1733,7 @@ p, label {
     .ift-home-services-boxes-top{
         width: 210px;
         height: 280px;
-        border: 1px solid transparent;
+        border: 1px solid;
         background-color: #000;
         border-image: linear-gradient(to top, #FB8500, #000);
         border-image-slice: 1;
